# FiestaOnlineCasinoBot

./: .gitignore  CMakeLists.txt  README.md
include/: assets.h  bitmap.h  capture.h  input.h  inventory.h
src/: CMakeLists.txt  assets.cpp  bitmap.cpp  capture.cpp  inventory.cpp  main.cpp
src/input/: keyboard.cpp  mouse.cpp
